Remove .toList()